修正文件上传部分的错误

--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -6,6 +6,10 @@ custom:
   init-sql: classpath:init.sql
 
 spring:
+  servlet:
+    multipart:
+      max-file-size: 128MB
+      max-request-size: 128MB
   data:
     # Redis 相关配置
     redis:
