--- a/server/pom.xml
+++ b/server/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.github.wrx886.e2echo</groupId>
     <artifactId>server</artifactId>
-    <version>0.0.1-alpha</version>
+    <version>1.0-SNAPSHOT</version>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
