服务端：基本完成 MessageController 及相关内容

--- a/e2echo-server/pom.xml
+++ b/e2echo-server/pom.xml
@@ -15,8 +15,8 @@
     </parent>
 
     <properties>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <spring-cloud.version>2025.1.0</spring-cloud.version>
     </properties>
 
@@ -78,6 +78,14 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
+        </dependency>
+
+        <!--mybatis-plus-->
+        <!--官方文档：https://baomidou.com/pages/bab2db/ -->
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <version>3.5.3.1</version>
         </dependency>
 
     </dependencies>
