--- a/e2echo-server/pom.xml
+++ b/e2echo-server/pom.xml
@@ -111,6 +111,14 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- Java-WebSocket -->
+        <dependency>
+            <groupId>org.java-websocket</groupId>
+            <artifactId>Java-WebSocket</artifactId>
+            <version>1.6.0</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
