--- a/e2echo-client/e2echo-client-common/pom.xml
+++ b/e2echo-client/e2echo-client-common/pom.xml
@@ -52,6 +52,12 @@
             <artifactId>jackson-annotations</artifactId>
         </dependency>
 
+        <!-- Source: https://mvnrepository.com/artifact/org.openjfx/javafx-controls -->
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
