客户端：完善客户端数据库

--- a/e2echo-client/e2echo-client-starter/pom.xml
+++ b/e2echo-client/e2echo-client-starter/pom.xml
@@ -49,6 +49,13 @@
             <artifactId>atlantafx-base</artifactId>
         </dependency>
 
+        <!--包含spring-test相关依赖-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
