--- a/e2echo-server/pom.xml
+++ b/e2echo-server/pom.xml
@@ -17,6 +17,7 @@
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
+        <skipTests>true</skipTests>
         <spring-cloud.version>2023.0.6</spring-cloud.version>
     </properties>
 
