客户端：增加打包设置；修复 WebSocket 客户端由于 onMessage 阻塞导致的超时问题

--- a/e2echo-client/e2echo-client-starter/pom.xml
+++ b/e2echo-client/e2echo-client-starter/pom.xml
@@ -13,6 +13,19 @@
     <artifactId>e2echo-client-starter</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>com.github.wrx886.e2echo.client.starter.Main$Starter</mainClass>
+                    <skip>false</skip> <!-- 启用打包 -->
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
