--- a/e2echo-server/pom.xml
+++ b/e2echo-server/pom.xml
@@ -105,6 +105,16 @@
             <artifactId>mysql-connector-j</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
         <!--包含spring-test相关依赖-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
