--- a/e2echo-server/src/main/resources/application.yml
+++ b/e2echo-server/src/main/resources/application.yml
@@ -3,6 +3,11 @@ server:
   port: 8080
 
 spring:
+  application:
+    name: e2echo-server
+  cloud:
+    nacos:
+      server-addr: localhost:8848
   jackson:
     time-zone: GMT+8
   datasource:
